fix eslint config and prettier, also added the api calls functions

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,8 @@
-{}
+{
+  "semi": true,
+  "useTabs": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "bracketSpacing": true,
+  "trailingComma": "none"
+}
