--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "prettier --write . && eslint --ignore-path .gitignore --fix . --ext .js,.jsx"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +31,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.4.2",
     "prettier": "2.8.4",
     "vite": "^4.1.0"
   },
