--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "lint": "prettier --write . && eslint --ignore-path .gitignore --fix . --ext .js,.jsx"
+    "lint": "prettier --write . && eslint --ignore-path .gitignore --fix . --ext .js,.jsx",
+    "test": "jest"
   },
   "dependencies": {
     "@mui/icons-material": "^5.11.0",
@@ -19,6 +20,12 @@
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
@@ -26,12 +33,15 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.3",
     "prettier": "2.8.4",
     "vite": "^4.1.0"
   },
