refactor selectorComponent, and fix tests, also sme eslint issues

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
-  "semi": true,
-  "useTabs": false,
-  "singleQuote": true,
-  "jsxSingleQuote": true,
-  "bracketSpacing": true,
-  "trailingComma": "none"
+    "semi": true,
+    "useTabs": false,
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "bracketSpacing": true,
+    "trailingComma": "none",
+    "tabWidth": 4,
+    "jsxBracketSameLine": true
 }
